# stocky

./: .gitignore  ISSUES.md  LICENSE.md  README.md  ROADMAP.md  app.py  bhavManager.ipynb  config.json  fbServiceAccount.json  historical data.ipynb  historical_data.db  holdings.db  install.sh  instrument.ipynb  pyproject.toml  requirements.in  requirements.txt  scrip.db  scripHandler.py  storage.ipynb  test.py
.devcontainer/: Dockerfile  devcontainer.json
PR/: 01-uv-ruff-vscode-foundation.md  02-typer-rich-cli.md  03-yahoo-schema-fix.md  04-bhavcopy-source-resolution.md  05-pipeline-refactor-validation-tests.md  README.md
archive/: EOD Data.ipynb  bhavList.db  database.ipynb  firebase_sandbox.ipynb  instruments.db  portfolio.ipynb  scripHandler.py  stockData.ipynb  storage.ipynb  yfrunbackukp.csv
bhavData/: BSE-20210401.CSV  bhavList.db
bhavData/bhav/: BSE-20210401.CSV  NSE-20210401.csv
course/: RateOfReturn.ipynb  myPortfolio.ipynb  notes.py  sample.ipynb  tickers.csv
data/output/: stocky.db
docs/: features.md
lib/: art.py  config.py  refresh_data.py  structure.py  welcome.py  zerodha.py
lib/screen/: screenManager.py  screens.py
src/: __init__.py  bse.py  merge_data.py  refresh_data.py  structure.py  welcome.py  yahoo.py
src/lib/: __init__.py  bse.py  yahoo.py  zerodha.py
stocky/: cli.py  config.py  database.py  pipeline.py  sources.py  yahoo.py
tests/: test_database.py  test_pipeline.py  test_sources.py  test_yahoo.py
userdata/: holdings.csv
zerodha/: holdings.csv  holdings.json  holdings_original.csv  mf_holdings.xlsx  mf_instruments.csv
(+5069 files in other folders)
